# moecut

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
scripts/: hf-gguf-download.sh
src/: common.c  common.h  info.c  main.c  profile.c  prune.c
tests/: make_synthetic.py  run_tests.sh  verify_synthetic.py
